<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="#cccccc"
        android:textSize="21px"
        android:gravity="center_vertical"
        android:text="@string/activate"
        android:layout_width="wrap_content"
        android:layout_height="80px"/>
    <View
        android:layout_width="match_parent"
        android:background="#363a43"
        android:layout_height="2px"/>

    <TextView
        android:textSize="18px"
        android:layout_marginTop="30px"
        android:textColor="#cccccc"
        android:text="@string/activate_code"
        android:layout_marginBottom="13px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/activateEt"
        android:background="@drawable/editttext_bg"
        android:layout_width="match_parent"
        android:layout_marginRight="5px"
        android:textColor="#888888"
        android:gravity="center_vertical"
        android:text="DDSADSDSD22445SASS"
        android:textSize="18px"
        android:layout_height="40px"/>

    <TextView
        android:textSize="18px"
        android:layout_marginTop="27px"
        android:textColor="#cccccc"
        android:text="@string/device_code"
        android:layout_marginBottom="13px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/device_code_tv"
        android:textSize="18px"
        android:textColor="#888888"
        android:layout_marginBottom="35px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:textSize="18px"
        android:textColor="#f0f0f0"
        android:id="@+id/activateBtn"
        android:text="@string/activate_text"
        android:background="@drawable/btn_activate_bg"
        android:layout_width="140px"
        android:layout_height="40px"/>
</LinearLayout>