<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textColor="#cccccc"
        android:textSize="21px"
        android:gravity="center_vertical"
        android:text="@string/setting_feature_title"
        android:layout_width="wrap_content"
        android:layout_height="80px"/>
    <View
        android:layout_width="match_parent"
        android:background="#363a43"
        android:layout_height="2px"/>

    <RelativeLayout
        android:id="@+id/feature_livenessLayout"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="140px">

        <TextView
            android:id="@+id/feature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22px"
            android:text="@string/feature_livess"
            android:textColor="#1199cc"
            android:textSize="19px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:layout_below="@+id/feature_title"
            android:layout_marginRight="80px"
            android:text="@string/feature_livess_describe"
            android:textColor="#cccccc"
            android:textSize="14px"/>

        <RadioButton
            android:id="@+id/feature_liveness_rb"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/radio_bg"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_centerVertical="true"
            android:layout_marginRight="6px"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:background="#363a43"
        android:layout_height="2px"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/feature_id_photoLayout"
        android:clickable="true"
        android:layout_height="140px">

        <TextView
            android:id="@+id/feature_id_photoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22px"
            android:text="@string/feature_id_photo"
            android:textColor="#1199cc"
            android:textSize="19px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:layout_below="@+id/feature_id_photoTitle"
            android:layout_marginRight="80px"
            android:text="@string/feature_id_photo_describe"
            android:textColor="#cccccc"
            android:textSize="14px"/>

        <RadioButton
            android:id="@+id/feature_id_photo_rb"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/radio_bg"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_marginRight="6px"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:background="#363a43"
        android:layout_height="2px"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15px"
        android:layout_marginRight="80px"
        android:text="@string/feature_id_photo_note"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14px"/>

</LinearLayout>